# serializer version: 1
# name: test_deannotate_module_source_preserves_specified_annotations
  '''
  import snowflake.snowpark
  
  from typing import Optional
  from snowflake.snowpark.session import Session
  from snowflake.snowpark.functions import col, sum, sproc
  
  
  @custom
  #: @sproc(native_app_params={'schema': 'math', 'application_roles': ['app_public', 'app_admin']})
  def sproc_sum(session: Session, first: int, second: int) -> int:
      return first + second
  
  #: @udf(native_app_params={
  #:     'schema': 'math',
  #:     'application_roles': ['app_public', 'app_admin']
  #: })
  #: @module.annotation
  def udf_sum(first: int, second: int) -> int:
      return first + second
  
  @custom
  def helper():
      pass
  '''
# ---
# name: test_deannotate_module_source_preserves_specified_annotations.1
  '''
  import snowflake.snowpark
  
  from typing import Optional
  from snowflake.snowpark.session import Session
  from snowflake.snowpark.functions import col, sum, sproc
  
  
  #: @custom
  #: @sproc(native_app_params={'schema': 'math', 'application_roles': ['app_public', 'app_admin']})
  def sproc_sum(session: Session, first: int, second: int) -> int:
      return first + second
  
  #: @udf(native_app_params={
  #:     'schema': 'math',
  #:     'application_roles': ['app_public', 'app_admin']
  #: })
  @module.annotation
  def udf_sum(first: int, second: int) -> int:
      return first + second
  
  @custom
  def helper():
      pass
  '''
# ---
# name: test_deannotate_module_source_removes_all_annotations
  '''
  import snowflake.snowpark
  
  from typing import Optional
  from snowflake.snowpark.session import Session
  from snowflake.snowpark.functions import col, sum, sproc
  
  
  #: @custom
  #: @sproc(native_app_params={'schema': 'math', 'application_roles': ['app_public', 'app_admin']})
  def sproc_sum(session: Session, first: int, second: int) -> int:
      return first + second
  
  #: @udf(native_app_params={
  #:     'schema': 'math',
  #:     'application_roles': ['app_public', 'app_admin']
  #: })
  #: @module.annotation
  def udf_sum(first: int, second: int) -> int:
      return first + second
  
  @custom
  def helper():
      pass
  '''
# ---
